--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+spring.datasource.url = jdbc:mysql://localhost:3306/poc_backend
+spring.datasource.username = root
+spring.datasource.password = dipak@1234
 
